Name:                yesod-alternative
Version:             0.1
Synopsis:            Some proof-of-concept code for alternative approaches to the standard Yesod approach.
Description:         See README.md file.
Homepage:            http://www.yesodweb.com/
License:             MIT
License-file:        LICENSE
Author:              Michael Snoyman
Maintainer:          michael@snoyman.com
Category:            Web
Build-type:          Simple
Extra-source-files:  fib/templates/*.tpl
Cabal-version:       >=1.8

Library
  Exposed-modules:     Yesod.Heist
                       Yesod.Combinator
  Build-depends:       base            >= 4             && < 5
                     , bytestring      >= 0.9           && < 0.10
                     , text            >= 0.11          && < 0.12
                     , transformers    >= 0.2.2         && < 0.4
                     , yesod-core      >= 1.0           && < 1.1
                     , blaze-html      >= 0.4           && < 0.5
                     , blaze-builder   >= 0.3           && < 0.4
                     , heist           >= 0.8           && < 0.9
                     , warp            >= 1.2           && < 1.3

Executable fib
  Main-Is:             app.hs
  hs-source-dirs:      fib
  other-modules:       FibState
  Build-depends:       base            >= 4             && < 5
                     , containers
                     , safecopy        >= 0.6           && < 0.7
                     , mtl             >= 2.0           && < 2.2
                     , acid-state      >= 0.6           && < 0.7
                     , yesod-alternative
                     , text
